# boss-

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: commit-dev-log.mdc  pet-page-primary.mdc
docs/: architecture.md  dev-log.md  docker.md
docs/media/: README.md
scripts/: probe_page_risk.py  smoke_p0.py
src/pet_boss/: __init__.py  compliance.py  config.py  display.py  index_cache.py  main.py  match_score.py  search_filters.py
src/pet_boss/agents/: __init__.py  analysis_ai.py  analysis_scoring.py  analysis_store.py  decision_log.py  job_detail_enrich.py  monitor_ai.py  pipeline.py  school_company_fit.py  school_tier_match.py  scout_ai.py  scout_hard_filter.py  scout_memory.py  scout_quality_filter.py  scout_query_memory.py  scout_search_strategy.py  secretary_ai.py
src/pet_boss/agents/planners/: __init__.py  analysis_review.py  base.py  daily_action.py  scout_strategy.py
src/pet_boss/ai/: config.py  prompts.py  service.py  token_usage.py
src/pet_boss/api/: boss.yaml  browser_client.py  client.py  endpoints.py  endpoints_loader.py  http_trace.py  httpx_helpers.py  models.py  region_tree.json  regions.py  throttle.py
src/pet_boss/auth/: browser.py  cookie_extract.py  health.py  manager.py  qr_login.py  token_store.py
src/pet_boss/cache/: store.py
src/pet_boss/commands/: _platform.py  cities.py  doctor.py  eval_cmd.py  login.py  logout.py  metrics.py  profile_cmd.py  register.py  schema.py  status.py
src/pet_boss/eval/: __init__.py  capture.py  rag_ablation.py  runner.py
src/pet_boss/evaluation/: __init__.py  ai_scoring.py  candidate_profile.py  dimensions.py  engine.py  models.py  signals.py  stages.py
src/pet_boss/observability/: __init__.py  event_log.py  summary.py
src/pet_boss/profile/: __init__.py  adaptive_scoring.py  career_inference.py  learning.py  memory.py  models.py  profiling.py  prompts.py  reject_learning.py  resume_parser.py  runner.py  scout_learning.py  store.py
src/pet_boss/rag/: __init__.py  backends.py  chroma_store.py  documents.py  embeddings.py  retriever.py  service.py  vector_store.py
src/pet_boss/resume/: export.py  pdf_import.py  pdf_text.py  store.py  templates.py
src/pet_boss/secretary/: __init__.py  config.py  email_sender.py  feedback.py  portrait.py  report.py  resume_intake.py  six_dim_score.py  xhs_post.py
src/pet_boss/web/: __init__.py  boss_service.py  browser_executor.py  profile_api.py  server.py  work_schedule.py
src/pet_boss/web/static/: pet.css  pet.html  pet.js
src/pet_boss/web/static/pet/: desks.json
tests/: conftest.py  test_agents.py  test_agents_stream.py  test_ai_config.py  test_ai_prompts.py  test_ai_service.py  test_api.py  test_api_client_methods.py  test_api_client_retry.py  test_api_httpx_helpers.py  test_auth.py  test_auth_and_login_extended.py  test_auth_browser.py  test_auth_manager_extended.py  test_auth_manager_flow.py  test_browser_client.py  test_browser_executor.py  test_browser_thread_safety.py  test_cache.py  test_cache_extended.py  test_cli_invariants.py  test_commands.py  test_compliance.py  test_cookie_extract_regression.py  test_display.py  test_doctor_extended.py  test_endpoints_loader.py  test_eval_and_rag_backend.py  test_evaluation.py  test_hooks.py  test_http_trace.py  test_index_cache.py  test_match_score.py  test_monitor_ai.py  test_output.py  test_pdf_resume.py  test_planners.py  test_platform_base.py  test_platform_cli.py  test_platform_not_supported.py  (+35 more)
